# wasm-rust

./: .gitignore  Cargo.toml  build.rs
compose/: database-services.yml
scripts/: run_database.bat
src/: main.rs
src/backend/: app_state.rs  main.rs
src/backend/app_state/: cache.rs  connection.rs  database.rs  mod.rs
src/frontend/: main.rs  reg_post.rs
src/server/: main.rs
src/wasm_core/: Cargo.toml
src/wasm_core/src/: lib.rs
web/static/: index.html
