[package]
name = "wasm-pack"
version = "0.1.0"
authors = ["Dudnik Pavel <ne.pridumal.nik@yandex.ru>"]
edition = "2021"

[[bin]]
name = "frontend"
path = "src/frontend/main.rs"

[[bin]]
name = "backend"
path = "src/backend/main.rs"

[dependencies]
actix-web = "*"
actix-files = "*"
actix-rt = "*"
env_logger = "*"
mysql = "*"
serde = { version = "*", features = ["derive"] }
